force-app/main/default/objects/Survey__c/fields/Answer_Count__c.field-meta.xml
<CustomField>
    <fullName>Answer_Count__c</fullName>
    <label>Answer Count</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10 Answer</fullName>
            </value>
            <value>
                <fullName>5 Answer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>