force-app/main/default/objects/Survey__c/fields/Answer_Image_10__c.field-meta.xml
<CustomField>
    <fullName>Answer_Image_10__c</fullName>
    <label>Answer Image 10</label>
    <length>100000</length>
    <type>Html</type>
</CustomField>