force-app/main/default/objects/Survey__c/fields/Answer_Image_11__c.field-meta.xml
<CustomField>
    <fullName>Answer_Image_11__c</fullName>
    <label>Answer Image 11</label>
    <length>100000</length>
    <type>Html</type>
</CustomField>