force-app/main/default/objects/Survey__c/fields/caseId__c.field-meta.xml
<CustomField>
    <fullName>caseId__c</fullName>
    <label>caseId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>