force-app/main/default/objects/Survey__c/fields/Current_Survey__c.field-meta.xml
<CustomField>
    <fullName>Current_Survey__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Survey</label>
    <referenceTo>Survey__c</referenceTo>
    <relationshipLabel>Surveys (Current Survey)</relationshipLabel>
    <relationshipName>Surveys_Current</relationshipName>
    <type>Lookup</type>
</CustomField>