force-app/main/default/objects/Survey__c/fields/Format_Skala__c.field-meta.xml
<CustomField>
    <fullName>Format_Skala__c</fullName>
    <label>Format Skala</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0 to 10</fullName>
            </value>
            <value>
                <fullName>10 to 0</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>