force-app/main/default/objects/Survey__c/fields/Master_Survey__c.field-meta.xml
<CustomField>
    <fullName>Master_Survey__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Master Survey</label>
    <referenceTo>Survey__c</referenceTo>
    <relationshipLabel>Surveys (Change Request)</relationshipLabel>
    <relationshipName>Surveys</relationshipName>
    <type>Lookup</type>
</CustomField>