force-app/main/default/objects/Survey__c/fields/Survey_Type__c.field-meta.xml
<CustomField>
    <fullName>Survey_Type__c</fullName>
    <label>Survey Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>I Ask</fullName>
                <default>true</default>
                <label>I Ask</label>
            </value>
            <value>
                <fullName>I Buy</fullName>
            </value>
            <value>
                <fullName>I Claim</fullName>
            </value>
            <value>
                <fullName>I Complain</fullName>
            </value>
            <value>
                <fullName>I Renew</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>