force-app/main/default/objects/Survey__c/fields/Used__c.field-meta.xml
<CustomField>
    <fullName>Used__c</fullName>
    <formula>Id == Master_Survey__r.Current_Survey__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Used</label>
    <type>Checkbox</type>
</CustomField>