force-app/main/default/objects/Survey__c/recordTypes/Change_Request.recordType-meta.xml
<RecordType>
    <fullName>Change_Request</fullName>
    <active>true</active>
    <description>Created by user and can be used to override the current master template</description>
    <label>Change Request</label>
</RecordType>