force-app/main/default/objects/Survey__c/recordTypes/Master.recordType-meta.xml
<RecordType>
    <fullName>Master</fullName>
    <active>true</active>
    <description>Created by system, used as master template</description>
    <label>Master</label>
</RecordType>