force-app/main/default/objects/Survey__c/recordTypes/Master_New_Onboarding.recordType-meta.xml
<RecordType>
    <fullName>Master_New_Onboarding</fullName>
    <active>true</active>
    <label>Master New Onboarding</label>
</RecordType>